feat: aktualisiere die Sichtbarkeit des Hauptfensters und verbessere die Shortcut-Registrierung

--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body{
     src: url(Noto-Sans/NotoSans-Bold.ttf);
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
+
 header{
     display: flex;
     justify-content: space-between;
